Changelog
=========

10.1.dev0 - (unreleased)
------------------------

10.0 - (2017-11-07)
-------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

9.9 - (2017-08-16)
------------------
* Bug fix: fixed an exception in queryContentType when
  the context ended up being plone view method instead of
  an object
  [ichim-david refs #85791]
* Bug fix W3C compliance modifications
  [valipod refs #86295]
* Upgrade step: Remove customized views at **ZMI > portal_skins/custom:
  eea_relateditems
  [valipod refs #86295]

9.8 - (2017-05-22)
------------------
* Change: Add dedicated async quota for relations jobs
  [avoinea refs #84915]
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

9.7 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

9.6 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

9.5 - (2017-02-14)
------------------
* Bug fix: Fix  `filter_relation_translations`
  [voineali refs #81658]

9.4 - (2016-10-31)
------------------
* Change: check if getFolderContents is present when checking the relation
  tool types otherwise we get an error within an async operation
  [ichim-david refs #75296]

9.3 - (2016-10-03)
------------------
* Change: Added dependency to plone.stringinterp 1.0.14+
  [avoinea]

9.2 - (2016-09-05)
------------------
* Bug fix: take into consideration that during tests relatedItems
  might not have access to plone.app.async queue
  [ichim-david refs #75480]

9.1 - (2016-09-05)
------------------
* Bug fix: Fix Related items URLs within Content-Rules
  [voineali refs #70758]

9.0 - (2016-08-29)
------------------
* Feature: Added possibility to automatically publish/retract object's related items
  and/or backward references via Content-Rules
  [catalin refs #70758]

8.3 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [ichim-david refs #71940]

8.2 - (2016-01-04)