@@ -1,8 +1,8 @@
 """ Upgrades for eea.relations 7.7
 """
-
 import logging
 import transaction
+from Acquisition import aq_base
 from persistent.list import PersistentList
 from Products.CMFCore.utils import getToolByName
 
@@ -28,7 +28,7 @@ def add_eea_refs(context):
         try:
             obj = brain.getObject()
             should_add_eea_refs = True
-            if hasattr(obj, "eea_refs"):
+            if hasattr(aq_base(obj), "eea_refs"):
                 should_add_eea_refs = False
             if obj.meta_type == 'Sparql':
                 try:
